tests/behavior/success/array_begin_ptr.bz
function main()
{
	mut a = [10: int32]();
	let begin = __builtin_array_begin_ptr(a);
	if (__builtin_pointer_to_int(begin) != __builtin_pointer_to_int(&a)) unreachable;

	let begin = __builtin_array_begin_mut_ptr(a);
	if (__builtin_pointer_to_int(begin) != __builtin_pointer_to_int(&a)) unreachable;
}
