tests/behavior/error/int_modulo_by_zero_i16.bz
function main()
{
	let a = 1i16;
	let b = 0i16;
	let _ = a % b;
}
